--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -10,11 +10,13 @@
     <th>ACTION</th>
   </tr>
   <tr *ngFor='let employee of employees'>
+    <!-- {{employee.joiningDate}} -->
     <td>{{employee.id}}</td>
     <td>{{employee.name | uppercase }}</td>
     <td>{{employee.age}}</td>
     <td>{{employee.designation | uppercase}}</td>
-    <td>{{employee.joiningDate | date: 'dd-MM-yyyy'}}</td>
+    <td>{{employee.joiningDate }}</td>
+    <!-- <td>{{employee.joiningDate }}</td> -->
     <td><button (click)=deleteEmployee(employee.id)>DELETE</button></td>
 
   </tr>
